# indusense_tp

./: .gitattributes  .gitignore  01_maintenance_ml.ipynb  README.md  b5_maintenance_ml.md  b6_deep_learning.ipynb  b6_deep_learning_donnees.md  b7_optimisation_explicabilite.md  mlflow.db  pyproject.toml  tp_deep_learning.ipynb  tp_deep_learning_patchcore.ipynb  tp_deep_learning_report.md
deep-learning/: b6_deep_learning.ipynb  b6_deep_learning_auto_encodeur.md  tp_deep_learning.ipynb  tp_deep_learning_patchcore.ipynb
scripts/: generate_model_card.py  run_vision_pipeline.py
src/indusense/: data.py  evaluation.py  explainability.py  models.py  tracking.py
src/vision/: augmentation.py  autoencoder.py  data.py  evaluation.py  model_card.py  patchcore.py  visualization.py
