[project]
name = "indusense-tp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "pandas>=2.2,<3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
